Fixes swagger preview, error page enhancement for Invalid Cookie
