# cmd/main.go
@@ -1,7 +1,6 @@
 package main
 
 import (
-	"encoding/json"
 	"log/slog"
 	"net/http"
 	"os"
@@ -38,12 +37,13 @@ func main() {
 	todoHTTP := todohttp.New(todoSvc, app.Logger)
 
 	public := http.FileServer(http.Dir("public"))
-	swagger := http.FileServer(http.Dir("openapi"))
+	openapi := http.FileServer(http.Dir("openapi"))
 
 	http.Handle("/public/", http.StripPrefix("/public/", public))
-	http.Handle("/swagger/", http.StripPrefix("/swagger/", swagger))
+	http.Handle("/openapi/", http.StripPrefix("/openapi/", openapi))
 
 	http.HandleFunc("/", server.Chain(todoHTTP.Root, server.Method(http.MethodGet)))
+	http.Handle("/swagger/", http.StripPrefix("/swagger/", server.Chain(todoHTTP.Swagger, server.Method(http.MethodGet))))
 	http.HandleFunc("/task", server.Chain(todoHTTP.TaskPage, server.Method(http.MethodGet), server.AuthMiddleware(app.DB)))
 
 	// User API
@@ -60,7 +60,8 @@ func main() {
 	http.HandleFunc("/tasks/{id}/done", server.Chain(todoHTTP.Done, server.IsHTMX(), server.Method(http.MethodPut),
 		server.AuthMiddleware(app.DB)))
 
-	http.HandleFunc("/health", server.Chain(healthStatus, server.Method(http.MethodGet)))
+	//TODO: Complete this health functions
+	http.HandleFunc("/health", server.Chain(func(w http.ResponseWriter, r *http.Request) {}, server.Method(http.MethodGet)))
 
 	app.Logger.Info("application is running on", "Address", app.Addr)
 
@@ -70,11 +71,6 @@ func main() {
 
 		return
 	}
-}
-
-func healthStatus(w http.ResponseWriter, _ *http.Request) {
-	w.WriteHeader(http.StatusOK)
-	_, _ = w.Write(json.RawMessage(`{"status":"OK"}`))
 }
 
 func getEnvOrDefault(key, def string) string {
